--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 
 
 
-  <script type="text/javascript" src="https://ccdn.mobildev.in/de8d058ac57c43da9083e49edac5ac79.js" data-token="PTNzKtMS66wN1Bv9m5BE" charset="UTF-8"></script>
+<script type="text/javascript" src="//ccdn.mobildev.in/5784ca1c02ea4f1a8d7b60f1b0c11891.js" data-token="6K6071nBYQePFyRKJ8t7" charset="UTF-8"></script>
 
    <script src="apex-accessibility-sdk.js"></script>
     <script>
