--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 
 
 
-<script type="text/javascript" src="//ccdn.mobildev.in/a56978ee817440be8066dd91ba96488c.js" data-token="PgW5437A4WIgDN922b9s" charset="UTF-8"></script>
+  <script type="text/javascript" src="https://ccdn.mobildev.in/de8d058ac57c43da9083e49edac5ac79.js" data-token="PTNzKtMS66wN1Bv9m5BE" charset="UTF-8"></script>
 
    <script src="apex-accessibility-sdk.js"></script>
     <script>
