--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 
 
 
-  <script type="text/javascript" src="//ccdn.mobildev.in/5784ca1c02ea4f1a8d7b60f1b0c11891.js" data-token="6K6071nBYQePFyRKJ8t7" charset="UTF-8"></script>
+  <script type="text/javascript" src="//ccdn.mobildev.in/49cb66f59e254d5e888c1820b9cfa969.js" data-token="khh50pe3Jxe935DOt0QZ" charset="UTF-8"></script>
 
    <script src="apex-accessibility-sdk.js"></script>
     <script>
