--- a/pagespeedtest.html
+++ b/pagespeedtest.html
@@ -46,7 +46,7 @@ th { background:#f4f4f4 }
      
 
 
-<input id="urlInput" placeholder="https://example.com" value="https://www.infosolid.com" style="width:340px">
+<input id="urlInput" placeholder="https://example.com" value="https://new.mobildev.com" style="width:340px">
 <button onclick="start()">Analiz Et</button>
 &nbsp;&nbsp;<a href="https://www.googleapis.com/pagespeedonline/v5/runPagespeed?url=https://infosolid.com&strategy=mobile&key=AIzaSyDRaX8y7srkpq-GmcM-umEddY4HBrrjjBo" target="_blank">Json Verisini Göster</a>
 &nbsp;&nbsp;<a href="https://pagespeed.web.dev/analysis/https-new-mobildev-com/cwv8o8k8xm?form_factor=mobile" target="_blank">PageSpeed Insights Test Et</a>
