--- a/page_speed.html
+++ b/page_speed.html
@@ -48,8 +48,8 @@ th { background:#f4f4f4 }
 
 <input id="urlInput" placeholder="https://example.com" value="https://new.mobildev.com" style="width:340px">
 <button onclick="start()">Analiz Et</button>
-&nbsp;&nbsp;<a href="https://www.googleapis.com/pagespeedonline/v5/runPagespeed?url=https://news.mobildev.com&strategy=mobile&key=AIzaSyDRaX8y7srkpq-GmcM-umEddY4HBrrjjBo" target="_blank">Json Verisini Göster</a>
-&nbsp;&nbsp;<a href="https://pagespeed.web.dev/analysis/https-new-mobildev-com/cwv8o8k8xm?form_factor=mobile" target="_blank">PageSpeed Insights Test Et</a>
+&nbsp;&nbsp;<a href="https://www.googleapis.com/pagespeedonline/v5/runPagespeed?url=https://new.mobildev.com&strategy=mobile&key=AIzaSyDRaX8y7srkpq-GmcM-umEddY4HBrrjjBo" target="_blank">Json Verisini Göster</a>
+&nbsp;&nbsp;<a href="https://pagespeed.web.dev/analysis/https-new-mobildev-com/cwv8o8k8xm?form_factor=mobile" target="_blank">Google PageSpeed Insights Test Et</a>
 <!--
 <button onclick="exportJSON()">JSON Export</button>
 <button onclick="exportCSV()">Excel (CSV)</button>
